static/css/main.css
body {
    /*overflow: hidden;*/
}
.landing-container {
    height: 100vh;
    background-image: url('../images/table.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    /*height: 100%;*/
    width: 100%;
    position: relative;
}
.title-container {
    overflow: hidden;
    position: absolute;
    bottom: 60%;
    height: 20vh;
    width: 100vw;
}
.landing-title {
    overflow: hidden;
    color: white;
    width: 82%;
    height: 12vh;
    text-align: center;
    line-height: 12vh;
    margin-left: 9%;
    margin-right: 9%;
    font-size: 12vh;
    position: absolute;
    top: 40%;
    border-radius: 2%;
    overflow: visible;
}
.landing-title-background {
    background-color: rgba(215, 142, 73, 0.85);
    width: 82%;
    height: 3vh;
    text-align: center;
    line-height: 3vh;
    margin-top: 4.5vh;
    margin-left: 9%;
    margin-right: 9%;
    font-size: 6vh;
    position: absolute;
    top: 40%;
    border-radius: 2%;
    overflow: visible;
}
.enter-button {
    /*background-color: #EC8E58;*/
    color: white;
    width: 30%;
    height: 7vh;
    text-align: center;
    line-height: 7vh;
    font-size: 200%;
    margin-left: 35%;
    margin-right: 35%;
    position: absolute;
    bottom: 50%;
    border-radius: 1%;
    border: 2px solid white;
    background-color: rgba(236, 142, 88, 0.25);
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}
.main-container {
    display: inline-block;
    width: 100%;
    height: 100vh;
    background-color: white;
    z-index: 2;
}

/*.main-background{
	position: relative;
	background-color: rgb(215,142,73);
	z-index: 1;
	height: 200vh;
	width: 100%;
	height: 100%
}*/

.page-one {
    display: block;
    height: 100vh;
    position: relative;
    background-image: url('../images/berries.jpg');
    background-size: cover;
}
.title-search {
    height: 400px;
    width: 100%;
    position: absolute;
    margin-top: -200px;
    top: 50%;
}
.title-text {
    height: 100px;
    width: 100%;
    line-height: 100px;
    position: relative;
}
.main-header {
    font-size: 50px;
    color: white;
    text-align: center;
}
.search-area {
    width: 100%;
    /*height: 50%;*/
    z-index: 2;
    position: relative;
}
.search-top-row {
    height: 60px;
    margin-left: auto;
    margin-right: auto;
    width: 780px;
}
.ingredient-form {
    width: 600px;
    display: inline-block;
    margin-right: auto;
    float: left;
    position: absolute;
    z-index: 2;
    height: 60px;
}
.new-ingredient {
    width: 100%;
    display: inline-block;
    position: relative;
    float: left;
    height: 100%;
    background-color: white;
    font-size: 150%;
    padding: 0 0 0 0;
    border: 2px solid #EC8E58;
    z-index: 2;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}
.new-ingredient {
    display: inline-block;
    border: solid 1px #dcdcdc;
    transition: box-shadow 0.3s, border 0.3s;
}
.new-ingredient:focus, .new-ingredient.focus {
    border: solid 1px #707070;
    box-shadow: 0 0 5px 1px #969696;
}
.output-button {
    float: right;
    display: inline-block;
    text-align: center;
    line-height: normal;
    margin-left: 600px;
    width: 120px;
    background-color: #EC8E58;
    height: 60px;
    line-height: 60px;
}
.output-button-label {
    display: inline-block;
    vertical-align: middle;
    line-height: normal;
}
.wrapper-dropdown {
    float: left;
    display: inline-block;
    width: 60px;
    background-color: #EC8E58;
    height: 100%;
    text-align: center;
    line-height: 60px;
}
.dropdown-label {
    width: 60px;
    overflow: hidden;
    text-align: center;
}
.recipeDivHolder {
    z-index: 1;
}
#recipeDivHolder {
    background-color: #dcdcdc;
    clear: left;
    width: 100%;
    /*margin-left: 10%;
	margin-right: 10%;*/
    margin-bottom: 2%;
}
.recipe-container {
    width: 47%;
    height: 400px;
    display: inline-block;
    position: relative;
    margin-left: 2%;
    margin-top: 1%;
    perspective: 800px;
}
.recipe-container.flip .recipe-flipper {
    transform: rotateY(180deg);
    -webkit-transform: rotateY(180deg);
}

.recipe-flipper {
    width: 100%;
    height: 100%;
    transition: 0.6s;
    transform-style: preserve-3d;
    position: relative;
}
.recipeDiv, .recipe-card {
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    position: absolute;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
}
.recipeDiv {
    background-size: cover;
    background-position: center;
    z-index: 2;
}
.recipeNameDiv {
    font-family: serif;
    font-size: 20px;
    color: white;
    position: absolute;
    bottom: 2px;
    left: 2px;
}
.recipe-card {
    background-color: white;
    transform: rotateY(180deg);
    -webkit-transform: rotateY(180deg);
}
.recipe-card-ingredients {
    height: 320px;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 1%;
    padding-right: 1%;
    width: 98%;
    background-color: white;
    overflow-y: scroll;
    position: absolute;
}
.recipe-name-card {
    font-family: serif;
    font-size: 20px;
    background-color: white;
    position: absolute;
    display: none;
    bottom: 2px;
    left: 2px;
}
.ingredient-card-list {
    font-family: serif;
    font-size: 20px;
    /*height: 100%;*/
    background-color: white;
}
.source-btn {
    background-color: #EC8E58;
    height: 60px;
    line-height: 60px;
    width: 100%;
    text-align: center;
    color: white;
    position: absolute;
    bottom: 0;
    right: 0;
}

/*.save-btn {
	background-color: red;
	color: white;
	position: absolute;
	bottom: 0;
	right: 0;
}*/

.number-ul {
    width: 100%;
}
.number-li {
    display: none;
    height: 60px;
    line-height: 60px;
    width: 100%;
}
.number-li-link {
    display: block;
    background-color: #EC8E58;
    text-decoration: none;
    width: 100%;
    z-index: 2;
    position: relative;
    color: white;
}
.bottom-bar {
    position: fixed;
    background-color: brown;
    z-index: 100;
    overflow: hidden;
    width: 100%;
    height: 30px;
    bottom: 0;
    left: 0;
}
.to-top-button {
    width: 100%;
    height: 30px;
    text-align: center;
    background-color: #EC8E58;
    color: black;
    display: none;
    position: fixed;
    bottom: 0;
    opacity: 0.8;
    z-index: 1;
}
.bottom-bar-element {
    display: inline-block;
    height: 30px;
    width: 100%;
    font-size: 30px;
    line-height: 30px;
}
.filler-container {
    clear: left;
    width: 100%;
    height: 40%;
    background-color: #dcdcdc;
    position: relative;
}
.filler-content {
    position: absolute;
    bottom: 10%;
    width: 90%;
    height: 80%;
    margin-left: 5%;
    margin-right: 5%;
    background-color: #dcdcdc;
    /*text-align: center;*/
}
.filler-one {
    width: 25%;
    height: 100%;
    float: left;
    margin-left: 6.25%;
    /*background-color: purple;*/
    /*background-image: url('../images/cooking.jpg');
	background-repeat: no-repeat;
	background-size: cover;*/
    /*opacity: 0.3;*/
    position: relative;
}
.filler-two {
    width: 25%;
    height: 100%;
    float: left;
    margin-left: 6.25%;
    /*background-color: purple;*/
    /*background-image: url('../images/cooking.jpg');
	background-repeat: no-repeat;
	background-size: cover;*/
    /*opacity: 0.3;*/
    position: relative;
}
.filler-three {
    width: 25%;
    height: 100%;
    float: left;
    margin-left: 6.25%;
    /*background-color: purple;*/
    /*background-image: url('../images/cooking.jpg');
	background-repeat: no-repeat;
	background-size: cover;*/
    /*opacity: 0.3;*/
    position: relative;
}
.cooking-pic {
    width: 100%;
    /*height:100%;*/
    background-image: url('../images/cooking.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 0.7;
}

/*spinner*/

@keyframes anim-rotate {
    0% {
        transform: rotate(0);
    }
    100% {
        transform: rotate(360deg);
    }
}
.spinner {
    display: inline-block;
    animation: anim-rotate 0.75s infinite linear;
    /*color: #fff;*/
    text-shadow: 0 0 .25em rgba(255, 255, 255, .3);
}
.spinner--steps {
    animation: anim-rotate 1s infinite steps(8);
}
.spinner--steps2 {
    animation: anim-rotate 1s infinite steps(12);
}

